--- a/app/src/main/res/layout/activity_bill.xml
+++ b/app/src/main/res/layout/activity_bill.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/txtStoreName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="22 AUGUST COFFEE"
+                android:text="COFFEE"
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:textColor="#000000"
