--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -2,26 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#FFF8E1"
     android:gravity="center"
-    android:padding="16dp"
-    android:background="#FFF8E1">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <LinearLayout
         android:id="@+id/billRootLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical" />
 
     <TextView
         android:id="@+id/tvInstruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="Quét mã QR để thanh toán"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:textColor="#795548"
-        android:layout_marginBottom="16dp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/qrImage"
@@ -34,10 +34,10 @@
         android:id="@+id/btnConfirmQR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Xác nhận thanh toán QR"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#795548"
+        android:text="Xác nhận thanh toán QR"
         android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp" />
+        android:textStyle="bold" />
 
 </LinearLayout>
